--- a/src/StudentOrganizer.Api/appsettings.json
+++ b/src/StudentOrganizer.Api/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "jwt": {
+    "key": "Student_organizer_key123@",
+    "issuer": "http://localhost:5000",
+    "expiryMinutes": 15
+  }
 }
