--- a/src/StudentOrganizer.Infrastructure/StudentOrganizer.Infrastructure.csproj
+++ b/src/StudentOrganizer.Infrastructure/StudentOrganizer.Infrastructure.csproj
@@ -1,6 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StudentOrganizer.Core\StudentOrganizer.Core.csproj" />
   </ItemGroup>
 
