--- a/src/StudentOrganizer.Api/appsettings.json
+++ b/src/StudentOrganizer.Api/appsettings.json
@@ -7,9 +7,13 @@
         }
     },
     "AllowedHosts": "*",
-    "jwt": {
-        "key": "Student_organizer_key123@",
-        "issuer": "http://localhost:5000",
-        "expiryMinutes": 15
-    }
+  "jwt": {
+    "key": "Student_organizer_key123@",
+    "issuer": "http://localhost:5000",
+    "expiryMinutes": 15
+  },
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017/",
+    "database": "StudentOrganizer"
+  }
 }
