--- a/src/StudentOrganizer.Infrastructure/StudentOrganizer.Infrastructure.csproj
+++ b/src/StudentOrganizer.Infrastructure/StudentOrganizer.Infrastructure.csproj
@@ -7,6 +7,8 @@
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.11.4" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.9.0" />
   </ItemGroup>
 
