Fix some build issues, add user repo implementation, complete happy path for registration and login

--- a/src/StudentOrganizer.Api/StudentOrganizer.Api.csproj
+++ b/src/StudentOrganizer.Api/StudentOrganizer.Api.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>907c01db-dceb-4bd5-b652-a2093789710b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
