--- a/src/StudentOrganizer.Api/appsettings.json
+++ b/src/StudentOrganizer.Api/appsettings.json
@@ -1,19 +1,19 @@
-{    
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-  "jwt": {
-    "key": "Student_organizer_key123@",
-    "issuer": "http://localhost:5000",
-    "expiryMinutes": 15
-  },
-  "mongo": {
-    "connectionString": "mongodb://localhost:27017/",
-    "database": "StudentOrganizer"
-  }
+{
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+	"AllowedHosts": "*",
+	"jwt": {
+		"key": "Student_organizer_key123@",
+		"issuer": "http://localhost:5000",
+		"expiryMinutes": 45
+	},
+	"mongo": {
+		"connectionString": "mongodb+srv://SggwUser:<password>@cluster0.lm8hd.mongodb.net/StudentOrganizerDb?retryWrites=true&w=majority",
+		"database": "StudentOrganizerDb"
+	}
 }
