--- a/src/StudentOrganizer.Api/appsettings.json
+++ b/src/StudentOrganizer.Api/appsettings.json
@@ -14,6 +14,6 @@
 	},
 	"mongo": {
 		"connectionString": "mongodb+srv://SggwUser:<password>@cluster0.lm8hd.mongodb.net/StudentOrganizerDb?retryWrites=true&w=majority",
-		"database": "StudentOrganizerDb"
+		"database": "StudentOrganizerDb",		
 	}
 }
