Cleanup startup, add ef core as other option for database provider, configure it

--- a/src/StudentOrganizer.Api/appsettings.json
+++ b/src/StudentOrganizer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+	"ConnectionStrings": {		
+		"PostgreConnection": "Host=localhost;Database=StudentOrganizer;Username=postgres;Password=123;Include Error Detail=True;"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
@@ -14,6 +17,6 @@
 	},
 	"mongo": {
 		"connectionString": "mongodb+srv://SggwUser:<password>@cluster0.lm8hd.mongodb.net/StudentOrganizerDb?retryWrites=true&w=majority",
-		"database": "StudentOrganizerDb",		
+		"database": "StudentOrganizerDb"
 	}
 }
