--- a/src/StudentOrganizer.Api/StudentOrganizer.Api.csproj
+++ b/src/StudentOrganizer.Api/StudentOrganizer.Api.csproj
@@ -5,6 +5,10 @@
     <UserSecretsId>907c01db-dceb-4bd5-b652-a2093789710b</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\DEV\Projekty\StudentOrganizer\src\StudentOrganizer.Api\StudentOrganizer.Api.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
